# TaskManagerPlus

./: .gitignore  README.md  index.html  latest.json  package-lock.json  package.json
.claude/: settings.local.json
docs/: PER_OEM_FEATURES.md
native/: CMakeLists.txt
native/include/: battery_devices.h  network_power_estimate.h  nt_process_io.h  process_info.h
native/src/: battery_devices.cpp  disk_telemetry.cpp  dll_main.cpp  gpu_telemetry.cpp  memory_telemetry.cpp  network_power_estimate.cpp  network_telemetry.cpp  npu_telemetry.cpp  nt_process_io.cpp  performance_telemetry.cpp  power_telemetry.cpp  process_control.cpp  storage_telemetry.cpp  system_info.cpp
scripts/: sign-nsis-updater-zip.sh  tauri-build-signed.sh
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: updater.key.pub
src-tauri/src/: ffi.rs  lib.rs  main.rs  process_classifier.rs  tray.rs
src-tauri/src/commands/: bluetooth.rs  disk.rs  display.rs  gpu.rs  mod.rs  network.rs  npu.rs  oem.rs  performance.rs  power.rs  processes.rs  status.rs  storage.rs  system.rs  task.rs  thermal_delegate.rs  thermal_delegate_win.rs  usb.rs  windows_system.rs
src/components/: BatteryImpact.tsx  FilterToolbar.tsx  InsightsFeeder.tsx  MemoryBar.tsx  PerformanceSidebar.tsx  PerformanceView.tsx  PowerWarner.tsx  ProcessTable.tsx  RealtimeGraph.tsx  ResourceGraph.tsx  SparklineCanvas.tsx  SystemOverview.tsx  TrayWidget.tsx  UpdateChecker.tsx  WhBarMiniChart.tsx
src/components/pages/: BatteryPage.tsx  CpuPage.tsx  DevicesPage.tsx  DiskPage.tsx  GpuPage.tsx  InsightsPage.tsx  MemoryPage.tsx  NetworkPage.tsx  NpuPage.tsx  SettingsPage.tsx  StoragePage.tsx
src/components/panels/: CpuPanel.tsx
src/hooks/: useBluetoothDevices.ts  useDiskData.ts  useGpuData.ts  useNetworkData.ts  useNpuData.ts  usePerformanceData.ts  usePowerData.ts  useProcesses.ts  useStatusData.ts  useSystemInfo.ts  useThermalDelegate.ts
src/lib/: appUsage.ts  batteryUsage.ts  cloudPaths.ts  devicePrefs.ts  insightNotifier.ts  insights.ts  insightsEngine.ts  ipc.ts  mainTrayBackground.ts  memoryCompositionColors.ts  ringBuffer.ts  seriesEquality.ts  settings.ts  smartOrganizer.ts  types.ts  usagePattern.ts  usbVendors.ts
src/styles/: components.css  index.css  layout.css  tokens.css
