[package]
name = "taskmanagerplus"
version = "0.1.0"
edition = "2021"

[lib]
name = "taskmanagerplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
log = "0.4"
env_logger = "0.11"
tauri-plugin-shell = "2"
