[package]
name = "taskmanagerplus"
version = "1.4.1"
edition = "2021"

[lib]
name = "taskmanagerplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
log = "0.4"
env_logger = "0.11"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tauri-plugin-notification = "2.3.3"
trash = "5"
# BLAKE3 is ~2-3× faster than SHA-256 on large files via SIMD and has no quality
# concerns for dedup (collision-resistant cryptographic hash). Used by the Smart
# Organizer's duplicate-file detector, which only hashes files whose size already
# collided with another file's size — the size pre-filter cuts the I/O surface
# by 10-100×, so the hash cost is bounded even on multi-hundred-GB folders.
blake3 = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Devices_Display",
    "Win32_Devices_Bluetooth",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
] }
